--- a/_css/juego.css
+++ b/_css/juego.css
@@ -13,10 +13,11 @@ body {
   margin: 0px;
   height: 100vh;
   background: #010002;
-  background-image: url("../_img/fifa.jpg");
+  background-image: url("../_img/fondo.jpg");
   background-color: #ffffff10;
   backdrop-filter: blur(5px);
   font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 a {
@@ -183,134 +184,6 @@ a:hover {
   margin: 20px;
 }
 
-#infoPelicula #pSinopsis {
-  max-width: 70%;
-  margin: 20px;
-}
-
-#container1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-}
-
-#infoGenero {
-  margin: 20px;
-}
-
-#infoGenero p {
-  display: inline;
-  margin: 1%;
-}
-
-#infoPlataforma {
-  margin: 20px;
-}
-
-.iconoPlataforma {
-  border: #77d7b9 1px solid;
-}
-
-#trailer {
-  margin-top: 2em;
-  text-align: center;
-}
-
-.comentarios {
-  margin: 20px;
-}
-
-.divComent {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  padding: 24px;
-  background-color: #b5dbf5;
-  width: 480px;
-  border-radius: 10px;
-  margin-bottom: 3%;
-  color: #034378;
-}
-
-.divComent p:first-child {
-  font-size: 8pt;
-  -ms-flex-item-align: end;
-  align-self: flex-end;
-}
-
-.divComent p:last-child {
-  font-weight: bold;
-}
-
-.divInsertComentario {
-  margin: 20px;
-}
-
-.divInsertComentario button {
-  margin: 20px;
-  background-color: #0cc7ed;
-  border: 1px solid #0093af;
-  border-radius: 5px;
-}
-
-.insertComentario {
-  background-color: #b5dbf5;
-  border-radius: 10px;
-  width: 20em;
-  height: 4em;
-}
-
-.insertComentario:hover {
-  background-color: #76c2f5;
-  border-radius: 10px;
-  width: 20em;
-  height: 4em;
-}
-
-.iconoPlataforma {
-  border-radius: 10%;
-  height: 4em;
-  width: 4em;
-}
-
-.imgCaratula {
-  width: 80%;
-  max-height: 80%;
-}
-
-@media (min-width: 600px) {
-  .contenedorPelicula {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-  }
-}
-
-.pSinopsis {
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-  font-size: 1.1em;
-}
-
 .containerCart {
   position: relative;
   right: 50px;
@@ -460,4 +333,227 @@ a:hover {
 }
 .cart i.shake {
   animation: shakeCart 0.4s ease-in-out forwards;
+}
+
+h1 {
+  font-weight: 100;
+}
+h1 span {
+  font-size: 1rem;
+}
+
+#infoPelicula {
+  margin: 2rem auto;
+  width: 100%;
+  max-width: 45rem;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 2rem;
+  padding: 2rem;
+}
+.portada {
+  width: 22rem;
+  height: 27rem;
+  border-radius: 10px;
+}
+.genero {
+  display: inline-block;
+  margin-right: 1rem;
+}
+.pegi {
+  display: inline-block;
+  margin-right: 1rem;
+}
+.divInfo {
+  width: 100%;
+}
+#plataforma {
+  display: inline-block;
+}
+#descripcion {
+  margin-top: 2rem;
+}
+#aPrecio {
+  display: inline-block;
+  text-decoration: line-through;
+  color: rgb(172, 25, 25);
+  margin-right: 0.5rem;
+}
+#precio {
+  display: inline-block;
+}
+
+.btn-danger {
+  margin: 1em;
+  min-width: 95%;
+}
+
+#toast {
+  position: relative;
+  width: 230px;
+  height: 50px;
+  left: 80%;
+  transform: translate(-50%);
+  background-color: #6abe8b;
+  color: rgb(250, 250, 250);
+  padding: 10px;
+  border-radius: 8px;
+  text-align: center;
+  z-index: 1;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  margin: 12px;
+}
+#toast.show {
+  visibility: visible;
+  animation: fadeInOut 3s;
+}
+
+@keyframes fadeInOut {
+  5%,
+  95% {
+    opacity: 1;
+    top: 50px;
+  }
+  15%,
+  85% {
+    opacity: 1;
+    top: 30px;
+  }
+}
+
+.buscar {
+  width: 50%;
+}
+
+.input-group {
+  display: flex;
+  justify-content: center;
+}
+
+.form-control {
+  background-color: #650072;
+  border: 1px solid #1b2b2f;
+  color: #000000;
+  height: 42px;
+}
+
+.form-control::-webkit-input-placeholder {
+  color: #0011ff;
+  height: 42px;
+}
+
+.form-control:-ms-input-placeholder {
+  color: #0011ff;
+  height: 42px;
+}
+
+.form-control::-ms-input-placeholder {
+  color: #0011ff;
+  height: 42px;
+}
+
+.form-control::placeholder {
+  color: #0011ff;
+  height: 42px;
+}
+
+.form-control:hover {
+  background-color: #49b6ff;
+  border: 1px solid #0011ff;
+  height: 42px;
+}
+
+.form-control:active {
+  background-color: #49b6ff;
+  border: 1px solid #0011ff;
+  height: 42px;
+}
+
+.form-control:focus {
+  background-color: #49b6ff;
+  border: 1px solid #0011ff;
+  height: 42px;
+}
+
+#search-addon {
+  margin-left: 5%;
+  height: 42px;
+  background-color: transparent;
+}
+
+a:hover {
+  color: #9200f3;
+}
+
+#btnBuscar {
+  color: #9200f3;
+}
+
+#btnBuscar:hover {
+  color: #ee14ad;
+}
+
+#btnGeneros {
+  font-size: 0.8em;
+  color: #9200f3;
+}
+
+#btnGeneros:hover {
+  color: #ee14ad;
+}
+
+p {
+  line-height: 1.3125rem;
+}
+
+.divResenias {
+  margin: 2.5rem auto 0;
+  max-width: 60.75rem;
+  padding: 0 1.25rem;
+}
+
+.divInsertarResenia {
+  margin-bottom: 1.25rem;
+  display: table;
+  width: 100%;
+  min-height: 5.3125rem;
+}
+
+.divInsertarResenia2 {
+  padding: 1rem;
+  display: table-cell;
+  vertical-align: top;
+  border-radius: 0.1875rem;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.08);
+}
+.divInsertarResenia2 textarea {
+  width: 100%;
+  resize: none;
+}
+
+.pMensaje {
+  margin-bottom: 1.25rem;
+}
+
+.datos {
+  color: #acb4c2;
+  font-size: 0.875rem;
+}
+
+.nombre {
+  float: left;
+}
+
+.fecha {
+  float: right;
+}
+
+.divValoracion {
+  float: right;
 }
