--- a/_css/sesion-inicio-formulario.css
+++ b/_css/sesion-inicio-formulario.css
@@ -1,27 +1,10 @@
 body {
   padding-top: 90px;
-  background-image: url("../_img/fondo.jpg"); /*linear-gradient(
-    to bottom right,
-    #4affde 0%,
-    #5b9dff 40%,
-    #d06bff 60%,
-    #ff34d2 100%
-  );
-  background-size: 200% 200%;
-  animation: movingGradient 5s linear infinite alternate;*/
+  background-image: url("../_img/fondo.jpg");
   background-color: #ffffff10;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(12px);
 }
-/*
-@keyframes movingGradient {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 100% 100%;
-  }
-}*/
 .panel-login {
   border-color: #ccc;
   -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
@@ -103,7 +86,7 @@ body {
   font-size: 14px;
   height: auto;
   font-weight: normal;
-  padding: 14px 0;
+  padding: 14px 10px;
   text-transform: uppercase;
   border-color: #59b2e6;
 }
@@ -121,7 +104,7 @@ body {
   font-size: 14px;
   height: auto;
   font-weight: normal;
-  padding: 14px 0;
+  padding: 14px 10px;
   text-transform: uppercase;
   border-color: #1cb94a;
 }
@@ -132,7 +115,7 @@ body {
   border-color: #1ca347;
 }
 
-/* */
+/* SVG */
 .path-0 {
   animation: pathAnim-0 8s;
   animation-timing-function: linear;
