--- a/_css/cuenta.css
+++ b/_css/cuenta.css
@@ -95,12 +95,13 @@ table th {
   flex-direction: row;
   justify-content: center;
   border-bottom: 1px solid grey;
+  background-color: transparent;
 }
 
 .btn-outline-dark {
   margin: 1rem;
-  color: #212529;
-  border-color: #212529;
+  color: #2260db;
+  border-color: #2260db;
   height: auto;
   font-weight: normal;
   padding: 14px 10px;
@@ -108,19 +109,20 @@ table th {
   font-size: 14px;
 }
 .btn-outline-dark:hover {
-  color: #ffffff;
-  border-color: #212529;
-  border-color: #212529;
+  color: #2260db;
+  border-color: #2260db;
+  background-color: #b313ab;
 }
 
 .btn-outline-dark:focus {
   color: #000000;
-  border-color: #212529;
-  border-color: #212529;
+  border-color: #2260db;
+  background-color: #b313ab;
 }
 
 .btnCerrarSesion {
   color: #ca1010;
+  border-color: #ca1010;
 }
 
 .btnCerrarSesion:hover,
@@ -131,7 +133,8 @@ table th {
 }
 
 .btn-register {
-  background-color: #1cb94e;
+  margin-top: 1em;
+  background-color: #0d6efd;
   outline: none;
   color: #fff;
   font-size: 14px;
@@ -139,18 +142,19 @@ table th {
   font-weight: normal;
   padding: 14px 10px;
   text-transform: uppercase;
-  border-color: #1cb94a;
+  border-color: #0d6efd;
 }
 .btn-register:hover,
 .btn-register:focus {
   color: #fff;
-  background-color: #1ca347;
-  border-color: #1ca347;
+  background-color: #029de0;
+  border-color: #029de0;
 }
 
 .panel-body {
   padding: 1rem 20rem 3rem;
-  background-color: white;
+  background-color: #b313ab;
+  border: 2px solid #2260db;
 }
 
 .logo {
@@ -195,12 +199,239 @@ nav button {
   background-color: rgba(196, 4, 255, 0.651);
 }
 
-.container {
-  margin-top: 1rem;
+.buscar {
+  width: 50%;
 }
 
-.form-control {
-  margin-bottom: 1rem;
+.input-group {
+  display: flex;
+  justify-content: center;
+}
+
+.form-controlBuscar {
+  background-color: #b313ab;
+  border: 1px solid #2260db;
+  color: #2260db;
+  height: 42px;
+}
+
+.form-controlBuscar::-webkit-input-placeholder {
+  color: #4e0058;
+  height: 42px;
+}
+
+.form-controlBuscar:-ms-input-placeholder {
+  color: #4e0058;
+  height: 42px;
+}
+
+.form-controlBuscar::-ms-input-placeholder {
+  color: #4e0058;
+  height: 42px;
+}
+
+.form-controlBuscar::placeholder {
+  color: #4e0058;
+  height: 42px;
+}
+
+.form-controlBuscar:hover {
+  background-color: #4e0058;
+  border: 1px solid #2260db;
+  height: 42px;
+}
+
+.form-controlBuscar:active {
+  background-color: #8e03a0;
+  border: 1px solid #2260db;
+  height: 42px;
+}
+
+.form-controlBuscar:focus {
+  background-color: #8e03a0;
+  border: 1px solid #2260db;
+  height: 42px;
+}
+
+#search-addon {
+  margin-left: 5%;
+  height: 42px;
+  background-color: transparent;
+}
+
+a:hover {
+  color: #9200f3;
+}
+
+#btnBuscar {
+  color: #b313ab;
+  border-color: #2260db;
+}
+
+#btnBuscar:hover {
+  color: #4e0058;
+  background-color: #2260db;
+}
+
+.btnPlataforma {
+  width: 100%;
+}
+
+.lighter-text {
+  color: #abb0be;
+}
+
+.main-color-text {
+  color: #2260db;
+}
+
+.containerCart {
+  position: relative;
+  right: 50px;
+}
+
+.badge {
+  background-color: #b313ab;
+  border-radius: 10px;
+  color: white;
+  display: inline-block;
+  font-size: 12px;
+  line-height: 1;
+  padding: 3px 7px;
+  text-align: center;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.shopping-cart {
+  display: none;
+  margin: 55px 0;
+  right: 5em;
+  background: white;
+  width: 320px;
+  position: fixed;
+  z-index: 3;
+  border-radius: 3px;
+  padding: 1em;
+  top: 2.5em;
+}
+
+.shopping-cart-header {
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 10px;
+}
+.shopping-cart-total {
+  float: right;
+}
+
+.shopping-cart-items {
+  padding-top: 5px;
+}
+
+.shopping-cart-items li {
+  margin-left: -10px;
+  margin-bottom: 18px;
+  list-style: none;
+}
+
+.shopping-cart-items img {
+  float: left;
+  margin-right: 12px;
+  margin-top: 10px;
+}
+
+.item-name {
+  display: block;
+  padding-top: 10px;
+  font-size: 16px;
+}
+
+.item-price {
+  color: #2260db;
+  margin-right: 8px;
+}
+
+.item-quantity {
+  margin-right: 10px;
+}
+
+.shopping-cart:after {
+  bottom: 100%;
+  left: 89%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-bottom-color: #2260db;
+  border-width: 8px;
+  margin-left: -8px;
+}
+
+.cart-icon {
+  color: #515783;
+  font-size: 24px;
+  margin-right: 7px;
+  float: left;
+}
+
+.button {
+  background: #b313ab;
+  color: white;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  display: block;
+  border-radius: 3px;
+  font-size: 16px;
+  margin: 25px 0 15px 0;
+}
+
+.button a:hover {
+  background: lighten(#ff49e7, 3%);
+  color: #ff49e7;
+}
+
+.clearfix:after {
+  list-style: none;
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.cart {
+  position: absolute;
+  right: 60px;
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  border: 1px solid #2260db;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+.cartIcon {
+  font-size: 25px;
+  color: #b313ab;
+}
+
+.cart:before {
+  content: attr(data-totalitems);
+  font-size: 12px;
+  font-weight: 600;
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  background: #b313ab;
+  line-height: 24px;
+  padding: 0 5px;
+  height: 24px;
+  min-width: 24px;
+  color: #2260db;
+  text-align: center;
+  border-radius: 24px;
 }
 
 .spanPerfil {
@@ -241,14 +472,14 @@ nav button {
 }
 
 .ticket-LogoDiv {
-  flex: 1 0 40%;
+  flex: 1 0 50%;
+  margin-right: 2.2em;
 }
 
 .ticket-Logo {
   display: block;
-  width: 50px;
+  width: 100%;
   height: auto;
-  margin-left: 15px;
 }
 
 .ticket-Info {
@@ -376,4 +607,17 @@ nav button {
 
 .row > * {
   width: auto;
+}
+
+.pagina {
+  justify-content: center;
+}
+
+a {
+  color: #2260db;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #b313ab;
 }
