--- a/_css/cuenta.css
+++ b/_css/cuenta.css
@@ -105,7 +105,6 @@ table th {
   height: auto;
   font-weight: normal;
   padding: 14px 10px;
-  text-transform: uppercase;
   font-size: 14px;
 }
 .btn-outline-dark:hover {
@@ -141,14 +140,29 @@ table th {
   height: auto;
   font-weight: normal;
   padding: 14px 10px;
-  text-transform: uppercase;
   border-color: #0d6efd;
+  text-transform: none;
 }
 .btn-register:hover,
 .btn-register:focus {
   color: #fff;
   background-color: #029de0;
   border-color: #029de0;
+}
+
+.btn-danger {
+  margin-top: 1em;
+  outline: none;
+  color: #fff;
+  font-size: 14px;
+  height: auto;
+  font-weight: normal;
+  padding: 14px 10px;
+  text-transform: none;
+}
+
+.btn-danger i {
+  margin-right: 0.5em;
 }
 
 .panel-body {
