--- a/_css/juego.css
+++ b/_css/juego.css
@@ -165,7 +165,7 @@ a:hover {
   filter: blur(2px);
 }
 
-#infoPelicula {
+#infoJuego {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -346,7 +346,7 @@ h1 span {
   font-size: 1rem;
 }
 
-#infoPelicula {
+#infoJuego {
   margin: 2rem auto;
   width: 100%;
   max-width: 45rem;
